WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92332
Gather the duplicated timer code into CachedResource.
https://bugs.webkit.org/show_bug.cgi?id=92332
Summary
Gather the duplicated timer code into CachedResource.
Dongseong Hwang
Reported
2012-07-25 22:08:22 PDT
When all clients are removed, CachedImage, CachedScript and CachedCSSStyleSheet start the timer to destroy decoded data. Those three classes have their own timer. Changed CachedCSSStyleSheet::didAddClient to call super class method in order to stop the timer. This change does not have any side effect because CachedResource::didAddClient only stops the timer in this case.
Attachments
Patch
(14.33 KB, patch)
2012-07-25 22:10 PDT
,
Dongseong Hwang
no flags
Details
Formatted Diff
Diff
Patch
(14.38 KB, patch)
2012-07-25 22:54 PDT
,
Dongseong Hwang
no flags
Details
Formatted Diff
Diff
Patch for landing
(14.31 KB, patch)
2012-07-26 19:37 PDT
,
Kwang Yul Seo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Dongseong Hwang
Comment 1
2012-07-25 22:10:22 PDT
Created
attachment 154537
[details]
Patch
Dongseong Hwang
Comment 2
2012-07-25 22:13:50 PDT
This is follow-up patch of
Bug 91733
. Geoffrey said "I'd like to see more code sharing for destroying decoded data on a timer.", and I agreed. Therefore, I did this patch.
Dongseong Hwang
Comment 3
2012-07-25 22:54:58 PDT
Created
attachment 154547
[details]
Patch
Dongseong Hwang
Comment 4
2012-07-25 22:55:58 PDT
Changed the Changlog to add "Internal review by".
Kwang Yul Seo
Comment 5
2012-07-26 16:03:59 PDT
Comment on
attachment 154547
[details]
Patch Clearing flags on attachment: 154547 Committed
r123808
: <
http://trac.webkit.org/changeset/123808
>
Kwang Yul Seo
Comment 6
2012-07-26 16:04:05 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 7
2012-07-26 18:30:03 PDT
Re-opened since this is blocked by 92443
Dongseong Hwang
Comment 8
2012-07-26 19:28:28 PDT
I'm sorry for my carelessness. CachedScript::script() calls m_decodedDataDeletionTimer.startOneShot(0). 466 void CachedResource::decodedDataDeletionTimerFired(Timer<CachedResource>*) 467 { 468 ASSERT(!hasClients()); 469 destroyDecodedData(); 470 } So, ASSERTION can be failed. I'll remove ASSERT and kseo will commit again.
Kwang Yul Seo
Comment 9
2012-07-26 19:37:28 PDT
Created
attachment 154815
[details]
Patch for landing
WebKit Review Bot
Comment 10
2012-07-27 01:25:58 PDT
Comment on
attachment 154815
[details]
Patch for landing Clearing flags on attachment: 154815 Committed
r123848
: <
http://trac.webkit.org/changeset/123848
>
WebKit Review Bot
Comment 11
2012-07-27 01:26:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug