Source/WebCore/loader/cache/CachedCSSStyleSheet.h
@@ -27,7 +27,6 @@
 #define CachedCSSStyleSheet_h
 
 #include "CachedResource.h"
-#include "Timer.h"
 #include <wtf/Vector.h>
 
 namespace WebCore {
@@ -47,8 +46,6 @@ namespace WebCore {
 
         virtual void didAddClient(CachedResourceClient*);
         
-        virtual void allClientsRemoved();
-
         virtual void setEncoding(const String&);
         virtual String encoding() const;
         virtual void data(PassRefPtr<SharedBuffer> data, bool allDataReceived);
@@ -62,14 +59,12 @@ namespace WebCore {
         void saveParsedStyleSheet(PassRefPtr<StyleSheetContents>);
     
     private:
-        void decodedDataDeletionTimerFired(Timer<CachedCSSStyleSheet>*);
         bool canUseSheet(bool enforceMIMEType, bool* hasValidMIMEType) const;
         virtual PurgePriority purgePriority() const { return PurgeLast; }
 
     protected:
         RefPtr<TextResourceDecoder> m_decoder;
         String m_decodedSheetText;
-        Timer<CachedCSSStyleSheet> m_decodedDataDeletionTimer;
 
         RefPtr<StyleSheetContents> m_parsedStyleSheetCache;
     };
