Source/WebCore/loader/cache/CachedScript.h
@@ -27,7 +27,6 @@
 #define CachedScript_h
 
 #include "CachedResource.h"
-#include "Timer.h"
 
 #if USE(JSC)
 namespace JSC {
@@ -47,9 +46,6 @@ namespace WebCore {
 
         const String& script();
 
-        virtual void didAddClient(CachedResourceClient*);
-        virtual void allClientsRemoved();
-
         virtual void setEncoding(const String&);
         virtual String encoding() const;
         virtual void data(PassRefPtr<SharedBuffer> data, bool allDataReceived);
@@ -62,12 +58,10 @@ namespace WebCore {
         void sourceProviderCacheSizeChanged(int delta);
 #endif
     private:
-        void decodedDataDeletionTimerFired(Timer<CachedScript>*);
         virtual PurgePriority purgePriority() const { return PurgeLast; }
 
         String m_script;
         RefPtr<TextResourceDecoder> m_decoder;
-        Timer<CachedScript> m_decodedDataDeletionTimer;
 #if USE(JSC)        
         mutable OwnPtr<JSC::SourceProviderCache> m_sourceProviderCache;
 #endif
